# minecraft-p2p-connector-source

./: .gitignore  HOSTS_INTEGRATION_PLAN.txt  PROJECT_DESCRIPTION.md  README.md  old_diff.txt  old_index.html  package-lock.json  package.json  scratch_fix.cjs  scratch_fix2.cjs  sniffer.py  sniffer_2.py  temp_screenshot.cjs  test_listen_bedrock.py  test_raknet.py  test_raknet_2.py  test_raknet_3.py  test_raknet_6.py  test_raknet_7.py  test_raknet_ipv6.py  test_raknet_ping.py  test_sniff.py  test_sniff_multi.py  test_sniffer.py  vite.config.js
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-05-22-ui-ux-update-plan.md
docs/superpowers/specs/: 2026-05-22-ui-ux-update-design.md
friends-server/: server.js
relay-server/: Cargo.toml  deploy.sh
relay-server/src/: main.rs
src/: App.vue  i18n.js  index.html  main.js  main_legacy.js  patch_ably.cjs  store.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/yggstack/: README.txt
src-tauri/src/: local_signaling.rs  main.rs  models.rs  signaling.rs
src-tauri/src/network/: bedrock_broadcaster.rs  e4mc.rs  geyser.rs  java_downloader.rs  manager.rs  minecraft.rs  mod.rs  network_swarm.rs  relay.rs  stun.rs  upnp.rs  wss_relay.rs  yggstack.rs
src-tauri/ygg-ffi/: yggstackbridge.h
src/components/: AuthModal.vue  ConnectModal.vue  HostModal.vue  PeerList.vue
src/views/: HomeView.vue  ProfileView.vue  SettingsView.vue
