[package]
name = "minecraft-p2p-connector"
version = "0.3.25"
edition = "2021"
rust-version = "1.83"
description = "Low-latency Minecraft Java P2P LAN connector over QUIC"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
anyhow = "1.0"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["wry"] }
tokio = { version = "1.44", features = ["full"] }
rupnp = "3.0"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
socket2 = "0.5"
http = "1.0"
bytes = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1"
