[package]
name = "minecraft-p2p-connector"
version = "0.3.36"
edition = "2021"
rust-version = "1.83"
description = "Low-latency Minecraft Java P2P LAN connector over QUIC"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["wry"] }
tokio = { version = "1.44", features = ["full"] }
rupnp = "3.0"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
socket2 = "0.5"
http = "1.0"
bytes = "1.0"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1"] }
http-body-util = "0.1"
trust-dns-resolver = { version = "0.23", default-features = true }
encoding_rs = "0.8"
zstd = "0.13"
aes = "0.8.4"
ecb = "0.1.2"
hmac = "0.12.1"
sha2 = "0.10.9"
pkcs7 = "0.4.1"
block-padding = "0.3.3"
rand = "0.9.4"
hex = "0.4.3"
zip = "7.2.0"
tempfile = "3.27.0"

